prevent icon clipping on mobile

--- a/src/styles/components/_social-links.scss
+++ b/src/styles/components/_social-links.scss
@@ -34,8 +34,8 @@
     height: 2rem;
 
     @include breakpoint(small) {
-      width: 1.6rem;
-      height: 1.6rem;
+      width: 1.7rem;
+      height: 1.7rem;
     }
   }
 }
